--- a/css/styles.css
+++ b/css/styles.css
@@ -420,7 +420,7 @@ select {
 
   .titulo,
   .subt {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 
   nav {
@@ -436,6 +436,7 @@ margin-top: 34vw;
   #pres{
     font-size: 0.9rem;
     padding: 0 0.5rem 0 0.5rem;
+    font-weight: 200;
      }
   #inicio{
     padding: 0;
