--- a/css/styles.css
+++ b/css/styles.css
@@ -268,8 +268,8 @@ footer p {
 }
 
 #ubicacion {
-  margin: 10px 20px 10px 20px;
-  padding: 10px 20px 10px 20px;
+  margin: 0;
+  padding: 0;
 
 }
 
